fix: header alignment should follow column alignment

--- a/packages/drip-table/src/layouts/table/components/header-cell/index.module.less
+++ b/packages/drip-table/src/layouts/table/components/header-cell/index.module.less
@@ -16,7 +16,7 @@
   &-body {
     position: relative;
     z-index: 1;
-    flex: 1 1;
+    flex: 0 1 auto;
     display: inline-flex;
     justify-content: center;
     align-items: center;
